test/ui/test/name-resolution/sequence-literals-unsupported.stderr
error: sequence literals are not supported yet
  ┌─ ${TEST_FOLDER}/name-resolution/sequence-literals-unsupported.lushui:6:24
  │
6 │ construct: List = List.[1 3 100 Nat32.0]
  │                        ═════════════════
  │

error: sequence literals are not supported yet
   ┌─ ${TEST_FOLDER}/name-resolution/sequence-literals-unsupported.lushui:12:9
   │
12 │         [\x \y Text."X"] => bottom
   │         ════════════════
   │

error: aborting due to 2 previous errors

